# important

./: .gitignore  .mocharc.yml  .vscodeignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
examples/sample_project/: .gitignore  README.md  helpers.py  main.py  pyproject.toml
examples/sample_project/sample_project/: __init__.py  helpers.py
examples/sample_project/src/: main.py
examples/sample_project/src/helpers/: helpers.py
examples/sample_project/src/models/: sample_models.py
examples/sample_project/src/sample_project/: __init__.py  cache.py  cli.py  client.py  config.py  demo_fixable.py  errors.py  models.py  utils.py  validators.py
examples/sample_project/src/utils/: utils.py
examples/sample_project/tests/: __init__.py  test_client.py  test_config.py  test_utils.py  test_validators.py
tests/application/: README.md  pyproject.toml
tests/application/other_library/: __init__.py
tests/application/other_library/core/: __init__.py  base.py  exceptions.py
tests/application/other_library/utils/: __init__.py  formatting.py  validation.py
tests/application/src/: alias_examples.py  complex_example.py  embedded_type_checking_example.py  enum_dot_access_example.py  main.py  multiline_closing_example.py  multiline_wrapping_example.py  nested_directory_example.py  symbol_consolidation_example.py  type_checking_example.py
tests/application/src/services/api/handlers/: project_handler.py  user_handler.py
tests/application/src/services/api/handlers/requests/: __init__.py  handler.py
(+41 files in other folders)
