[project]
name = "sample-project"
version = "0.1.0"
description = "Sample Python project for testing the Important extension"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "seaborn>=0.13.0",
    "tensorflow>=2.15.0",
    "typing_extensions>=4.9.0",
]

[tool.ruff.lint.isort]
known-first-party = ["other_library"]

[tool.ruff]
line-length = 88
